--- a/HTML/1-atributi.html
+++ b/HTML/1-atributi.html
@@ -15,6 +15,6 @@
     <p style="color: red;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque aspernatur commodi perferendis voluptas sequi veniam dicta iste repudiandae in nobis!</p>
     <a href="https://webcon.rs" target="_blank">WEBCON.RS</a>
     <img src="logo.png" alt="webcon logo">
-    <img src="banner.png" alt="webcon logo">
+    <img src="banner.png" alt="banner" height="300" width="500">
 </body>
 </html>
