--- a/CSS/WEBCON Blog/index.html
+++ b/CSS/WEBCON Blog/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="index.html">Naslovna</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="blog.html">Radionice</a></li>
+            <li><a href="radionice.html">Radionice</a></li>
         </ul>
     </nav>
     <!-- header -->
