--- a/CSS/display/1-display-uvod.html
+++ b/CSS/display/1-display-uvod.html
@@ -10,6 +10,6 @@
 <body>
     <section class="block">Block</section>
     <section class="inline-block">Inline block</section>
-    <section class="inline">Inline</section>
+    <span class="inline">Inline</span>
 </body>
 </html>
