--- a/CSS/display/3-display-inline.html
+++ b/CSS/display/3-display-inline.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="display-inline.css">
 </head>
 <body>
-    <h1></h1>
+    <h1>Blok elementi <span>ovo je sa manjim fontom</span></h1>
     <section class="inline">Prva sekcija</section>
     <section class="inline">Druga sekcija</section>
 </body>
