--- a/TheoryProjekat/index.html
+++ b/TheoryProjekat/index.html
@@ -90,5 +90,20 @@
             <button>More</button>
         </article>
     </section>
+    <!-- footer -->
+    <footer>
+        <div class="container">
+            <div>
+                &copy; Untitled Design TEMPLATED Images Unsplash
+            </div>
+            <div>
+                <a href=""><i class="fab fa-facebook-f"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-facebook-f"></i></a>
+                <a href=""><i class="fab fa-vimeo-v"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
