--- a/KodiranjeSubotom/AssemblyProjekat/index.html
+++ b/KodiranjeSubotom/AssemblyProjekat/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assembly</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- header -->
+    <header>
+        <nav>
+            <a href="" class="logo">Assembly</a>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Clients</a></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+        <hgroup>
+            <h1>Lorem, ipsum dolor.</h1>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <button class="btn">Read more</button>
+        </hgroup>
+    </header>
 </body>
 </html>
