--- a/KodiranjeSubotom/AssemblyProjekat/index.html
+++ b/KodiranjeSubotom/AssemblyProjekat/index.html
@@ -26,5 +26,33 @@
             <button class="btn">Read more</button>
         </hgroup>
     </header>
+    <!-- first -->
+    <section class="first container">
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus dolore architecto eos sit explicabo rem.</p>
+        <article>
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos rerum quia laudantium odio praesentium odit expedita vero repudiandae nobis neque, mollitia sunt dolorum aliquam dolorem quas eius exercitationem fugit modi.</p>
+                <button class="btn">More info</button>
+            </div>
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos rerum quia laudantium odio praesentium odit expedita vero repudiandae nobis neque, mollitia sunt dolorum aliquam dolorem quas eius exercitationem fugit modi.</p>
+                <button class="btn">More info</button>
+            </div>
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos rerum quia laudantium odio praesentium odit expedita vero repudiandae nobis neque, mollitia sunt dolorum aliquam dolorem quas eius exercitationem fugit modi.</p>
+                <button class="btn">More info</button>
+            </div>
+        </article>
+    </section>
+    <!-- second -->
+    <section class="second">
+        <div class="container">
+            <h2>Lorem ipsum dolor sit.</h2>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, explicabo.</p>
+            <p>This is Assembly, a free, fully standards-compliant CSS template designed by <a href="">TEMPLATED</a>. The photos in this template are from <a href="">Fotogrph</a>. This free template is released under the <a href="">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)</p>
+            <button>Learn more</button>
+        </div>
+    </section>
 </body>
 </html>
