--- a/KodiranjeSubotom/AssemblyProjekat/index.html
+++ b/KodiranjeSubotom/AssemblyProjekat/index.html
@@ -11,7 +11,7 @@
     <!-- header -->
     <header>
         <nav>
-            <a href="" class="logo">Assembly</a>
+            <a href="" class="logo" id="home">Assembly</a>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -21,13 +21,13 @@
             </ul>
         </nav>
         <hgroup>
-            <h1>Lorem, ipsum dolor.</h1>
+            <h1>Lorem, ipsum dolores.</h1>
             <p>Lorem ipsum dolor sit amet.</p>
             <button class="btn">Read more</button>
         </hgroup>
     </header>
     <!-- first -->
-    <section class="first container">
+    <section class="first container" id="about">
         <h2>Lorem ipsum dolor sit amet.</h2>
         <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus dolore architecto eos sit explicabo rem.</p>
         <article>
@@ -46,7 +46,7 @@
         </article>
     </section>
     <!-- second -->
-    <section class="second">
+    <section class="second" id="clients">
         <div class="container">
             <h2>Lorem ipsum dolor sit.</h2>
             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, explicabo.</p>
@@ -54,5 +54,16 @@
             <button>Learn more</button>
         </div>
     </section>
+    <!-- footer -->
+    <footer>
+        <p>&copy; Untitled. All rights reserved. | Photos by <a href=""> Fotogrph</a> | Design by <a href="">TEMPLATED</a>.</p>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#clients">Clients</a></li>
+            <li><a href="">Careers</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
