--- a/FlexboxRadionica1/projektic/index.html
+++ b/FlexboxRadionica1/projektic/index.html
@@ -9,6 +9,10 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>start</h1>
+    <!-- header -->
+    <header>
+        <h1>Flexbox</h1>
+        <p>by webcon.rs</p>
+    </header>
 </body>
 </html>
