--- a/FlexboxRadionica1/projektic/index.html
+++ b/FlexboxRadionica1/projektic/index.html
@@ -20,24 +20,25 @@
             <div class="row">
                 <h2>Welcome to Webcon</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quaerat necessitatibus provident inventore dolore, rem illum perferendis et quae, alias aliquid dolorum! Ipsa ut aperiam sed, ipsam voluptatum nobis excepturi?</p>
+                <hr>
             </div>
             <div class="row">
                 <div class="col">
                     <i class="fas fa-air-freshener"></i>
                     <h3>Lorem, ipsum dolor.</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, reprehenderit ratione sunt vitae maiores recusandae debitis, obcaecati reiciendis dignissimos nisi earum ipsa molestiae autem? Aperiam, doloremque debitis sint nostrum cupiditate ea aspernatur rem repellat ex impedit sit hic voluptate voluptatum, commodi non harum ab? Totam?</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, reprehenderit ratione sunt vitae maiores recusandae debitis, obcaecati reiciendis dignissimos nisi earum ipsa molestiae autem? Aperiam, doloremque debitis sint nostrum cupiditate.</p>
                     <button>Learn more</button>
                 </div>
                 <div class="col">
                     <i class="fas fa-american-sign-language-interpreting"></i>
                     <h3>Lorem, ipsum dolor.</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, reprehenderit ratione sunt vitae maiores recusandae debitis, obcaecati reiciendis dignissimos nisi earum ipsa molestiae autem? Aperiam, doloremque debitis sint nostrum cupiditate ea aspernatur rem repellat ex impedit sit hic voluptate voluptatum, commodi non harum ab? Totam?</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, reprehenderit ratione sunt vitae maiores recusandae debitis, obcaecati reiciendis dignissimos nisi earum ipsa molestiae autem? Aperiam, doloremque debitis sint nostrum cupiditate.</p>
                     <button>Learn more</button>
                 </div>
                 <div class="col">
                     <i class="fas fa-bahai"></i>
                     <h3>Lorem, ipsum dolor.</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, reprehenderit ratione sunt vitae maiores recusandae debitis, obcaecati reiciendis dignissimos nisi earum ipsa molestiae autem? Aperiam, doloremque debitis sint nostrum cupiditate ea aspernatur rem repellat ex impedit sit hic voluptate voluptatum, commodi non harum ab? Totam?</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, reprehenderit ratione sunt vitae maiores recusandae debitis, obcaecati reiciendis dignissimos nisi earum ipsa molestiae autem? Aperiam, doloremque debitis sint nostrum cupiditate.</p>
                     <button>Learn more</button>
                 </div>
             </div>
