--- a/FlexboxRadionica1/projektic/index.html
+++ b/FlexboxRadionica1/projektic/index.html
@@ -43,7 +43,21 @@
                 </div>
             </div>
         </div>
-
+    </section>
+    <!-- blog -->
+    <section class="blog">
+        <div class="container">
+            <div class="col">
+                <img src="img/blog1.jpg" alt="">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores voluptatum ipsam facilis eligendi, cumque in sequi sunt ipsum iure sapiente itaque quos pariatur non totam tempora, labore sint expedita voluptate! Tenetur rerum similique corrupti, saepe magni cumque incidunt totam dolore ratione a, amet ipsa consectetur.</p>
+            </div>
+            <div class="col">
+                <img src="img/blog1.jpg" alt="">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores voluptatum ipsam facilis eligendi, cumque in sequi sunt ipsum iure sapiente itaque quos pariatur non totam tempora, labore sint expedita voluptate! Tenetur rerum similique corrupti, saepe magni cumque incidunt totam dolore ratione a, amet ipsa consectetur.</p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
