--- a/FlexboxRadionica1/projektic/index.html
+++ b/FlexboxRadionica1/projektic/index.html
@@ -59,5 +59,18 @@
             </div>
         </div>
     </section>
+    <!-- footer -->
+    <footer>
+        <div class="container">
+            <h2>Get in touch</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam itaque vel omnis quia esse accusamus placeat non rerum laudantium quaerat.</p>
+            <a href=""><i class="fab fa-facebook-square"></i></a>
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href=""><i class="fab fa-youtube-square"></i></a>
+            <hr>
+            <p>&copy; 2021. webcon.rs</p>
+        </div>
+    </footer>
 </body>
 </html>
