--- a/music-app/index.html
+++ b/music-app/index.html
@@ -11,6 +11,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+        <a href="" class="logo"><span>Music</span>App</a>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">How It Works</a></li>
+            <li><a href="">Subscription</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
