--- a/music-app/index.html
+++ b/music-app/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- nav -->
     <nav>
         <a href="" class="logo"><span>Music</span>App</a>
         <ul>
@@ -19,5 +20,16 @@
             <li><a href="">Subscription</a></li>
         </ul>
     </nav>
+    <!-- header -->
+    <header>
+        <div class="col">
+            <h1><span>Music</span> for everyone</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum cum, repudiandae reprehenderit voluptate adipisci asperiores eum illo. Cum, totam ipsa.</p>
+            <button type="button">Start for trial</button>
+        </div>
+        <div class="col">
+            <img src="img/header.png" alt="">
+        </div>
+    </header>
 </body>
 </html>
