--- a/music-app/index.html
+++ b/music-app/index.html
@@ -24,7 +24,7 @@
     <header>
         <div class="col">
             <h1><span>Music</span> for everyone</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum cum, repudiandae reprehenderit voluptate adipisci asperiores eum illo. Cum, totam ipsa.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br> Dolorum cum, repudiandae reprehenderit voluptate adipisci asperiores eum illo. Cum, totam ipsa.</p>
             <button type="button">Start for trial</button>
         </div>
         <div class="col">
