--- a/music-app/index.html
+++ b/music-app/index.html
@@ -31,5 +31,15 @@
             <img src="img/header.png" alt="">
         </div>
     </header>
+    <!-- unlimited -->
+    <section class="unlimited container">
+        <article>
+            <h2>Unlimited Access to 100k tracks</h2>
+        </article>
+        <article>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti quae fugit eius! Beatae quidem accusamus eos inventore consectetur odio culpa a nisi vel obcaecati nihil suscipit facilis eligendi voluptatem cupiditate quasi aut consequatur repellat, quisquam commodi quas cumque? Nesciunt, tempore? Quae laborum aut accusamus distinctio quaerat tempore odio a totam.</p>
+            <button type="button">Try it now</button>
+        </article>
+    </section>
 </body>
 </html>
