--- a/music-app/index.html
+++ b/music-app/index.html
@@ -41,5 +41,28 @@
             <button type="button">Try it now</button>
         </article>
     </section>
+
+    <!-- how it works -->
+    <section class="howItWorks">
+        <h2 class="container">How it works</h2>
+        <div class="container">
+            <article>
+                <i class="fas fa-user"></i>
+                <h3>Create an account</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus ratione maiores harum ipsum ipsam, asperiores aut placeat tempore soluta sit corrupti minus officiis inventore, reprehenderit nesciunt fugiat perferendis fugit dolore.</p>
+            </article>
+            <article>
+                <i class="fas fa-drum"></i>
+                <h3>Choose plan</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus ratione maiores harum ipsum ipsam, asperiores aut placeat tempore soluta sit corrupti minus officiis inventore, reprehenderit nesciunt fugiat perferendis fugit dolore.</p>
+            </article>
+            <article>
+                <i class="fas fa-cloud-download-alt"></i>
+                <h3>Download music</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus ratione maiores harum ipsum ipsam, asperiores aut placeat tempore soluta sit corrupti minus officiis inventore, reprehenderit nesciunt fugiat perferendis fugit dolore.</p>
+            </article>
+        </div>
+    </section>
+
 </body>
 </html>
