--- a/music-app/index.html
+++ b/music-app/index.html
@@ -64,5 +64,31 @@
         </div>
     </section>
 
+    <!-- artists -->
+    <section class="artists container">
+        <div class="row">
+            <h2>Our concept &amp; artists</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque id eos perspiciatis neque animi doloribus ipsum ducimus corporis maiores vero rerum non iste atque, necessitatibus quas amet eaque asperiores vitae voluptates itaque. Voluptatem magnam minus dignissimos. Labore repellat eligendi ut!</p>
+        </div>
+        <div class="row">
+            <div class="col">
+                <img src="img/artists1.jpg" alt="">
+                <h3>Soul music</h3>
+            </div>
+            <div class="col">
+                <img src="img/artists2.jpg" alt="">
+                <h3>Live concerts</h3>
+            </div>
+            <div class="col">
+                <img src="img/artists3.jpg" alt="">
+                <h3>DJ sets</h3>
+            </div>
+            <div class="col">
+                <img src="img/artists4.jpg" alt="">
+                <h3>Live streams</h3>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
