--- a/ion_radionica/index.html
+++ b/ion_radionica/index.html
@@ -6,23 +6,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
 	<link rel="stylesheet" href="style.css" />
-	<title>Document</title>
+	<title>ION</title>
 </head>
 <body>
 	<!-- NAVIGACIJA -->
 	<nav>
-		<a href="" class="logo">ION</a>
-		<ul>
-			<li><a href="">Home</a></li>
-			<li><a href="">About us</a></li>
-			<li><a href="">Contact</a></li>
-		</ul>
+		<div class="container">
+			<a href="" class="logo">ION</a>
+			<ul>
+				<li><a href="">Home</a></li>
+				<li><a href="">About us</a></li>
+				<li><a href="">Contact</a></li>
+				<li><a href="">Sign Up</a></li>
+			</ul>
+		</div>	
 	</nav>
 	<!-- HEADER -->
 	<header>
 		<hgroup>
 			<h1>THIS IS ION</h1>
-			<h4>A free responsive template by <span>TEMPLATED</span></h4>
+			<h4>A free responsive template by <span>templated</span></h4>
 			<button class="btn blue">sing up</button>
 			<button class="btn transparent">Learn More</button>
 		</hgroup>
