--- a/ion_radionica/index.html
+++ b/ion_radionica/index.html
@@ -30,6 +30,38 @@
 			<button class="btn transparent">Learn More</button>
 		</hgroup>
 	</header>
+	<section class="about container">
+		<hgroup>
+			<h2>Ipsum Feugiat dolor</h2>
+			<h4>Lorem ipsum dolor sit amet consectetur</h4>
+		</hgroup>
+		<div class="wrapper">
+			<article class="card">
+				<i class="fas fa-chart-area"></i>
+				<div class="text">
+					<h3>Justo Placerat</h3>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores molestiae, nemo quae velit deserunt rem ullam sunt esse totam fuga asperiores ut nam voluptates debitis.</p>
+				</div>
+			</article>
+			<article class="card">
+				<i class="fas fa-chart-area"></i>
+				<div class="text">
+					<h3>Justo Placerat</h3>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores molestiae, nemo quae velit deserunt rem ullam sunt esse totam fuga asperiores ut nam voluptates debitis.</p>
+				</div>
+			</article>
+			<article class="card">
+				<i class="fas fa-chart-area"></i>
+				<div class="text">
+					<h3>Justo Placerat</h3>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores molestiae, nemo quae velit deserunt rem ullam sunt esse totam fuga asperiores ut nam voluptates debitis.</p>
+				</div>
+			</article>
+		</div>
+	</section>
+
+
+
 	<script src="main.js"></script>
 </body>
 </html>
