--- a/ion_radionica/index.html
+++ b/ion_radionica/index.html
@@ -44,14 +44,14 @@
 				</div>
 			</article>
 			<article class="card">
-				<i class="fas fa-chart-area"></i>
+				<i class="fas fa-recycle"></i>
 				<div class="text">
 					<h3>Justo Placerat</h3>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores molestiae, nemo quae velit deserunt rem ullam sunt esse totam fuga asperiores ut nam voluptates debitis.</p>
 				</div>
 			</article>
 			<article class="card">
-				<i class="fas fa-chart-area"></i>
+				<i class="fas fa-cog"></i>
 				<div class="text">
 					<h3>Justo Placerat</h3>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores molestiae, nemo quae velit deserunt rem ullam sunt esse totam fuga asperiores ut nam voluptates debitis.</p>
