--- a/ion_radionica/index.html
+++ b/ion_radionica/index.html
@@ -30,6 +30,7 @@
 			<button class="btn transparent">Learn More</button>
 		</hgroup>
 	</header>
+	<!-- ABOUT -->
 	<section class="about container">
 		<hgroup>
 			<h2>Ipsum Feugiat dolor</h2>
@@ -59,7 +60,21 @@
 			</article>
 		</div>
 	</section>
-
+	<!-- SLIDER -->
+	<section class="slider">
+		<hgroup>
+			<h2>Commodo accumsan aliquam</h2>
+			<h4>Lorem ipsum dolor sit amet consectetur</h4>
+		</hgroup>
+		<div class="slide-card">
+			<img src="images/pic01.jpg" alt="">
+		</div>
+		<div class="slide-text">
+			<h4>Lorem, ipsum dolor</h4>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates delectus maxime architecto. Minima est dolorem ea dolor dolore doloribus illum, earum beatae quas! Aperiam repudiandae quidem modi non itaque quod.</p>
+			<button class="btn">Learn more</button>
+		</div>
+	</section>
 
 
 	<script src="main.js"></script>
