--- a/ion_radionica/index.html
+++ b/ion_radionica/index.html
@@ -136,24 +136,28 @@
 			</div>
 		</div>
 	</section>
+	<!-- THREE -->
+	<section class="three">
+		<article>
+			<h2>Mollis ut adipisicing</h2>
+			<img src="images/pic03.jpg" alt="">
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet cupiditate laborum qui tempore earum consequatur asperiores voluptatibus. Temporibus cumque voluptatem in qui, incidunt doloremque quaerat, nesciunt eum nemo quia ipsum.</p>
+			<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque quae nam optio deleniti saepe delectus modi non omnis. Ratione, veniam.</p>
+		</article>
+		<aside>
+			<h3>Socials</h3>
+			<i class="fab fa-facebook"></i>
+			<hr>
+			<i class="fab fa-instagram"></i>
+			<hr>
+			<i class="fab fa-twitter"></i>
+			<hr>
+			<i class="fab fa-youtube"></i>
+		</aside>
+	</section>
 
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<script src="slider/owl.carousel.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
-
-<div class="owl-carousel owl-theme">
-    <div class="item"><h4>1</h4></div>
-    <div class="item"><h4>2</h4></div>
-    <div class="item"><h4>3</h4></div>
-    <div class="item"><h4>4</h4></div>
-    <div class="item"><h4>5</h4></div>
-    <div class="item"><h4>6</h4></div>
-    <div class="item"><h4>7</h4></div>
-    <div class="item"><h4>8</h4></div>
-    <div class="item"><h4>9</h4></div>
-    <div class="item"><h4>10</h4></div>
-    <div class="item"><h4>11</h4></div>
-    <div class="item"><h4>12</h4></div>
-</div>
