three css article

--- a/ion_radionica/index.html
+++ b/ion_radionica/index.html
@@ -137,7 +137,7 @@
 		</div>
 	</section>
 	<!-- THREE -->
-	<section class="three">
+	<section class="three container">
 		<article>
 			<h2>Mollis ut adipisicing</h2>
 			<img src="images/pic03.jpg" alt="">
