--- a/ion_radionica/index.html
+++ b/ion_radionica/index.html
@@ -155,6 +155,10 @@
 			<i class="fab fa-youtube"></i>
 		</aside>
 	</section>
+	<!-- FOOTER -->
+	<footer>
+		<p>&copy; Untitled. All rights reserved. <span>Design: TEMPLATED</span> Images: Unspash</p>
+	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 	<script src="slider/owl.carousel.js"></script>
