nav slider aside better

--- a/ion_radionica/index.html
+++ b/ion_radionica/index.html
@@ -24,8 +24,10 @@
 			</ul>
 		</div>	
 	</nav>
+	<!-- On top -->
+	<a href="#header" class="onTop">On top</a>
 	<!-- HEADER -->
-	<header>
+	<header id="header">
 		<hgroup>
 			<h1>THIS IS ION</h1>
 			<h4>A free responsive template by <span>templated</span></h4>
@@ -146,13 +148,26 @@
 		</article>
 		<aside>
 			<h3>Socials</h3>
-			<i class="fab fa-facebook"></i>
+			<div class="card-social">
+				<i class="fab fa-facebook"></i>
+				<div class="card-text">Pratite nas na FB-u</div>
+			</div>
 			<hr>
-			<i class="fab fa-instagram"></i>
+			<div class="card-social">
+				<i class="fab fa-twitter"></i>
+				<div class="card-text">Pratite nas na tviteru</div>
+			</div>
 			<hr>
-			<i class="fab fa-twitter"></i>
+			<div class="card-social">
+				<i class="fab fa-instagram"></i>
+				<div class="card-text">Pratite nas na insti</div>
+			</div>
 			<hr>
-			<i class="fab fa-youtube"></i>
+			<div class="card-social">
+				<i class="fab fa-youtube"></i>
+				<div class="card-text">Pratite nas na tubu</div>
+			</div>
+			<hr>
 		</aside>
 	</section>
 	<!-- FOOTER -->
