--- a/ion_radionica/index.html
+++ b/ion_radionica/index.html
@@ -25,9 +25,9 @@
 		</div>	
 	</nav>
 	<!-- On top -->
-	<a href="#header" class="onTop">On top</a>
+	<a class="onTop">On top</a>
 	<!-- HEADER -->
-	<header id="header">
+	<header>
 		<hgroup>
 			<h1>THIS IS ION</h1>
 			<h4>A free responsive template by <span>templated</span></h4>
