--- a/JAVASCRIPT/miniProjekat/index.html
+++ b/JAVASCRIPT/miniProjekat/index.html
@@ -15,6 +15,12 @@
         <h1>Webcon</h1>
     </header>
 
+    <!-- footer -->
+    <footer>
+        <p>Kodiranje uzivo sredom, a bogami i subotom.</p>
+        <p>&copy; 2021. WEBCON.RS</p>
+    </footer>
+
     <script src="main.js"></script>
 </body>
 </html>
