prvi prikaz stilovi

--- a/JAVASCRIPT/miniProjekat/index.html
+++ b/JAVASCRIPT/miniProjekat/index.html
@@ -15,6 +15,33 @@
         <h1>Webcon</h1>
     </header>
 
+    <!-- tabovi -->
+    <section class="tabovi container">
+        <article class="linkovi">
+            <a href="">Javascript</a>
+            <a href="">PHP</a>
+            <a href="">WordPress</a>
+        </article>
+        <article class="prikazi">
+            <div class="col-2">
+                <!-- js view -->
+                <div id="jsView">
+                    <h2>Javascript</h2>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum tempore expedita nostrum inventore, molestiae libero? Dignissimos ducimus laborum iusto aperiam nihil optio mollitia. Non repudiandae numquam sed necessitatibus minima, nulla cupiditate aspernatur? Cumque nostrum excepturi enim ex culpa modi. Vero.</p>
+                    <br><br>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia reprehenderit nisi rem omnis ratione eaque incidunt aperiam amet aliquam placeat?</p>
+                    <button>Learn more</button>
+                </div> 
+            </div>
+            <div class="col-1">
+                <div id="jsViewImg">
+                    <img src="img/js.png" alt="">
+                </div>
+            </div>
+        </article>
+    </section>
+
     <!-- footer -->
     <footer>
         <p>Kodiranje uzivo sredom, a bogami i subotom.</p>
