ostali prikazi html

--- a/JAVASCRIPT/miniProjekat/index.html
+++ b/JAVASCRIPT/miniProjekat/index.html
@@ -33,10 +33,34 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia reprehenderit nisi rem omnis ratione eaque incidunt aperiam amet aliquam placeat?</p>
                     <button>Learn more</button>
                 </div> 
+                <!-- php view -->
+                <div id="phpView">
+                    <h2>PHP</h2>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum tempore expedita nostrum inventore, molestiae libero? Dignissimos ducimus laborum iusto aperiam nihil optio mollitia. Non repudiandae numquam sed necessitatibus minima, nulla cupiditate aspernatur? Cumque nostrum excepturi enim ex culpa modi. Vero.</p>
+                    <br><br>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia reprehenderit nisi rem omnis ratione eaque incidunt aperiam amet aliquam placeat?</p>
+                    <button>Learn more</button>
+                </div> 
+                <!-- wp view -->
+                <div id="wpView">
+                    <h2>WordPress</h2>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum tempore expedita nostrum inventore, molestiae libero? Dignissimos ducimus laborum iusto aperiam nihil optio mollitia. Non repudiandae numquam sed necessitatibus minima, nulla cupiditate aspernatur? Cumque nostrum excepturi enim ex culpa modi. Vero.</p>
+                    <br><br>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia reprehenderit nisi rem omnis ratione eaque incidunt aperiam amet aliquam placeat?</p>
+                    <button>Learn more</button>
+                </div>
             </div>
             <div class="col-1">
                 <div id="jsViewImg">
                     <img src="img/js.png" alt="">
+                </div>
+                <div id="phpViewImg">
+                    <img src="img/php.png" alt="">
+                </div>
+                <div id="wpViewImg">
+                    <img src="img/wp.png" alt="">
                 </div>
             </div>
         </article>
