--- a/ion_radionica/index.html
+++ b/ion_radionica/index.html
@@ -17,10 +17,10 @@
 		<div class="container">
 			<a href="" class="logo">ION</a>
 			<ul>
-				<li><a href="">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="">About us</a></li>
 				<li><a href="">Contact</a></li>
-				<li><a href="">Sign Up</a></li>
+				<li><a href="sign_up.html">Sign Up</a></li>
 			</ul>
 		</div>	
 	</nav>
