sing up form css

--- a/ion_radionica/sign_up.html
+++ b/ion_radionica/sign_up.html
@@ -32,7 +32,7 @@
 				<h3>Sign up</h3>
 				<label for="name"><i class="fas fa-user"></i><input type="text" name="name" placeholder="Name"></label>
 				<label for="lastname"><i class="fas fa-user"></i><input type="text" name="lastname" placeholder="Last name"></label>
-				<label for="password"><i class="fas fa-user"></i><input type="password" name="password" placeholder="Password"></label>
+				<label for="password"><i class="fas fa-lock"></i><input type="password" name="password" placeholder="Password"></label>
 				<button class="btn blue">Sign Up</button>
 			</form>
 		</div>
